--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ li {
     padding: 10px 15px;
     margin-bottom: 10px;
     border-radius: 8px;
-    list-style-type: decimal;
+    list-style-type: none;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
 
